Make CppInterOp compatible with llvm 19

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,13 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - name: ubu22-x86-gcc12-clang-repl-19
+            os: ubuntu-22.04
+            compiler: gcc-12
+            clang-runtime: '19'
+            cling: Off
+            cppyy: On
+            coverage: true
           - name: ubu22-x86-gcc12-clang-repl-18
             os: ubuntu-22.04
             compiler: gcc-12
@@ -50,6 +57,12 @@ jobs:
             cling-version: '1.0'
             cppyy: On
             coverage: true
+          - name: win2022-msvc-clang-repl-19
+            os: windows-2022
+            compiler: msvc
+            clang-runtime: '19'
+            cling: Off
+            cppyy: Off
           - name: win2022-msvc-clang-repl-18
             os: windows-2022
             compiler: msvc
@@ -75,6 +88,12 @@ jobs:
             cling: On
             cling-version: '1.0'
             cppyy: Off
+          - name: osx14-arm-clang-clang-repl-19
+            os: macos-14
+            compiler: clang
+            clang-runtime: '19'
+            cling: Off
+            cppyy: On
           - name: osx14-arm-clang-clang-repl-18
             os: macos-14
             compiler: clang
@@ -99,6 +118,12 @@ jobs:
             clang-runtime: '13'
             cling: On
             cling-version: '1.0'
+            cppyy: On
+          - name: osx13-x86-clang-clang-repl-19
+            os: macos-13
+            compiler: clang
+            clang-runtime: '19'
+            cling: Off
             cppyy: On
           - name: osx13-x86-clang-clang-repl-18
             os: macos-13
@@ -350,7 +375,7 @@ jobs:
         else
           # Apply patches
           llvm_vers=$(echo "${{ matrix.clang-runtime }}" | tr '[:lower:]' '[:upper:]')
-          if [[ "${llvm_vers}" != "18" ]]; then
+          if [[ "${llvm_vers}" == "16" ]]||[[ "${llvm_vers}" == "17" ]]; then
             git apply -v ../patches/llvm/clang${{ matrix.clang-runtime }}-*.patch
             echo "Apply clang${{ matrix.clang-runtime }}-*.patch patches:"
           fi
@@ -470,6 +495,13 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - name: ubu22-x86-gcc12-clang-repl-19-cppyy
+            os: ubuntu-22.04
+            compiler: gcc-12
+            clang-runtime: '19'
+            cling: Off
+            cppyy: On
+            coverage: true
           - name: ubu22-x86-gcc12-clang-repl-18-cppyy
             os: ubuntu-22.04
             compiler: gcc-12
@@ -498,6 +530,12 @@ jobs:
             cppyy: On
           #FIXME: Windows CppInterOp tests expected to fail
           #until https://github.com/compiler-research/CppInterOp/issues/188 is solved
+          - name: win2022-msvc-clang-repl-19
+            os: windows-2022
+            compiler: msvc
+            clang-runtime: '19'
+            cling: Off
+            cppyy: Off
           - name: win2022-msvc-clang-repl-18
             os: windows-2022
             compiler: msvc
@@ -542,6 +580,12 @@ jobs:
           #  cling: On
           #  cling-version: '1.0'
           #  cppyy: On
+          - name: osx14-arm-clang-clang-repl-19-cppyy
+            os: macos-14
+            compiler: clang
+            clang-runtime: '19'
+            cling: Off
+            cppyy: On
           - name: osx14-arm-clang-clang-repl-18-cppyy
             os: macos-14
             compiler: clang
@@ -566,6 +610,12 @@ jobs:
             clang-runtime: '13'
             cling: On
             cling-version: '1.0'
+            cppyy: On
+          - name: osx13-x86-clang-clang-repl-19-cppyy
+            os: macos-13
+            compiler: clang
+            clang-runtime: '19'
+            cling: Off
             cppyy: On
           - name: osx13-x86-clang-clang-repl-18-cppyy
             os: macos-13
@@ -1076,6 +1126,12 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - name: ubu22-x86-gcc12-clang-repl-19-emscripten_wasm
+            os: ubuntu-22.04
+            compiler: gcc-12
+            clang-runtime: '19'
+            cling: Off
+            micromamba_shell_init: bash
           - name: ubu22-x86-gcc12-clang-repl-18-emscripten_wasm
             os: ubuntu-22.04
             compiler: gcc-12
@@ -1101,6 +1157,12 @@ jobs:
             cling: On
             cling-version: '1.0'
             micromamba_shell_init: bash
+          - name: osx14-arm-clang-clang-repl-19-emscripten_wasm
+            os: macos-14
+            compiler: clang
+            clang-runtime: '19'
+            cling: Off
+            micromamba_shell_init: bash
           - name: osx14-arm-clang-clang-repl-18-emscripten_wasm
             os: macos-14
             compiler: clang
@@ -1125,6 +1187,12 @@ jobs:
             clang-runtime: '13'
             cling: On
             cling-version: '1.0'
+            micromamba_shell_init: bash
+          - name: osx13-x86-clang-clang-repl-19-emscripten_wasm
+            os: macos-13
+            compiler: clang
+            clang-runtime: '19'
+            cling: Off
             micromamba_shell_init: bash
           - name: osx13-x86-clang-clang-repl-18-emscripten_wasm
             os: macos-13
