--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1091,7 +1091,7 @@ jobs:
             echo "Running valgrind on passing tests"
             CLANG_VERSION="${{ matrix.clang-runtime }}"
             SUPPRESSION_FILE="../etc/clang${CLANG_VERSION}-valgrind.supp"
-            valgrind --show-error-list=yes --error-exitcode=1 --track-origins=yes --suppressions="${SUPPRESSION_FILE}" --suppressions=../etc/valgrind-cppyy-cling.supp python -m pytest -m "not xfail" -v
+            valgrind --show-error-list=yes --error-exitcode=1 --track-origins=yes --gen-suppressions=all --suppressions="${SUPPRESSION_FILE}" --suppressions=../etc/valgrind-cppyy-cling.supp python -m pytest -m "not xfail" -v
         fi
         export RETCODE=+$?
         echo ::endgroup::
