[ci] Update Linux CI to Ubuntu 24

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,33 +21,33 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - name: ubu22-x86-gcc12-clang-repl-19
-            os: ubuntu-22.04
-            compiler: gcc-12
+          - name: ubu24-x86-gcc13-clang-repl-19
+            os: ubuntu-24.04
+            compiler: gcc-13
             clang-runtime: '19'
             cling: Off
             cppyy: On
-          - name: ubu22-x86-gcc12-clang-repl-18
-            os: ubuntu-22.04
-            compiler: gcc-12
+          - name: ubu24-x86-gcc13-clang-repl-18
+            os: ubuntu-24.04
+            compiler: gcc-13
             clang-runtime: '18'
             cling: Off
             cppyy: On
-          - name: ubu22-x86-gcc12-clang-repl-17
-            os: ubuntu-22.04
-            compiler: gcc-12
+          - name: ubu24-x86-gcc13-clang-repl-17
+            os: ubuntu-24.04
+            compiler: gcc-13
             clang-runtime: '17'
             cling: Off
             cppyy: On
-          - name: ubu22-x86-gcc12-clang-repl-16
-            os: ubuntu-22.04
-            compiler: gcc-12
+          - name: ubu24-x86-gcc13-clang-repl-16
+            os: ubuntu-24.04
+            compiler: gcc-13
             clang-runtime: '16'
             cling: Off
             cppyy: On
-          - name: ubu22-x86-gcc9-clang13-cling
-            os: ubuntu-22.04
-            compiler: gcc-9
+          - name: ubu24-x86-gcc13-clang13-cling
+            os: ubuntu-24.04
+            compiler: gcc-13
             clang-runtime: '13'
             cling: On
             cling-version: '1.0'
@@ -300,6 +300,7 @@ jobs:
       if: ${{ runner.os == 'Linux' && steps.cache.outputs.cache-hit != 'true' }}
       run: |
         # Install deps
+        sudo apt remove needrestart
         sudo apt-get update
         sudo apt-get install valgrind
         sudo apt-get autoremove
@@ -476,34 +477,34 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - name: ubu22-x86-gcc12-clang-repl-19-cppyy
-            os: ubuntu-22.04
-            compiler: gcc-12
+          - name: ubu24-x86-gcc13-clang-repl-19-cppyy
+            os: ubuntu-24.04
+            compiler: gcc-13
             clang-runtime: '19'
             cling: Off
             cppyy: On
             coverage: true
-          - name: ubu22-x86-gcc12-clang-repl-18-cppyy
-            os: ubuntu-22.04
-            compiler: gcc-12
+          - name: ubu24-x86-gcc13-clang-repl-18-cppyy
+            os: ubuntu-24.04
+            compiler: gcc-13
             clang-runtime: '18'
             cling: Off
             cppyy: On
-          - name: ubu22-x86-gcc12-clang-repl-17-cppyy
-            os: ubuntu-22.04
-            compiler: gcc-12
+          - name: ubu24-x86-gcc13-clang-repl-17-cppyy
+            os: ubuntu-24.04
+            compiler: gcc-13
             clang-runtime: '17'
             cling: Off
             cppyy: On
-          - name: ubu22-x86-gcc12-clang-repl-16-cppyy
-            os: ubuntu-22.04
-            compiler: gcc-12
+          - name: ubu24-x86-gcc13-clang-repl-16-cppyy
+            os: ubuntu-24.04
+            compiler: gcc-13
             clang-runtime: '16'
             cling: Off
             cppyy: On
-          - name: ubu22-x86-gcc9-clang13-cling-cppyy
-            os: ubuntu-22.04
-            compiler: gcc-9
+          - name: ubu24-x86-gcc13-clang13-cling-cppyy
+            os: ubuntu-24.04
+            compiler: gcc-13
             clang-runtime: '13'
             cling: On
             cling-version: '1.0'
@@ -748,6 +749,7 @@ jobs:
       if: runner.os == 'Linux'
       run: |
         # Install deps
+        sudo apt remove needrestart
         sudo apt-get update
         sudo apt-get install git g++ debhelper devscripts gnupg python3
         sudo apt-get install -y libc6-dbg
@@ -971,6 +973,9 @@ jobs:
       run: |
         python3 -m venv .venv
         source .venv/bin/activate
+        python -m pip install --upgrade pip
+        pip install setuptools
+        pip install wheel
         # Install CPyCppyy
         git clone --depth=1 https://github.com/compiler-research/CPyCppyy.git
         mkdir CPyCppyy/build
@@ -1009,7 +1014,6 @@ jobs:
         cd cppyy/test
         echo ::group::Prepare For Testing
         make all
-        python -m pip install --upgrade pip
         python -m pip install pytest
         python -m pip install pytest-xdist
         python -m pip install numba
@@ -1081,33 +1085,33 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - name: ubu22-x86-gcc12-clang-repl-19-emscripten_wasm
-            os: ubuntu-22.04
-            compiler: gcc-12
+          - name: ubu24-x86-gcc13-clang-repl-19-emscripten_wasm
+            os: ubuntu-24.04
+            compiler: gcc-13
             clang-runtime: '19'
             cling: Off
             micromamba_shell_init: bash
-          - name: ubu22-x86-gcc12-clang-repl-18-emscripten_wasm
-            os: ubuntu-22.04
-            compiler: gcc-12
+          - name: ubu24-x86-gcc13-clang-repl-18-emscripten_wasm
+            os: ubuntu-24.04
+            compiler: gcc-13
             clang-runtime: '18'
             cling: Off
             micromamba_shell_init: bash
-          - name: ubu22-x86-gcc12-clang-repl-17-emscripten_wasm
-            os: ubuntu-22.04
-            compiler: gcc-12
+          - name: ubu24-x86-gcc13-clang-repl-17-emscripten_wasm
+            os: ubuntu-24.04
+            compiler: gcc-13
             clang-runtime: '17'
             cling: Off
             micromamba_shell_init: bash
-          - name: ubu22-x86-gcc12-clang-repl-16-emscripten_wasm
-            os: ubuntu-22.04
-            compiler: gcc-12
+          - name: ubu24-x86-gcc13-clang-repl-16-emscripten_wasm
+            os: ubuntu-24.04
+            compiler: gcc-13
             clang-runtime: '16'
             cling: Off
             micromamba_shell_init: bash
-          - name: ubu22-x86-gcc9-clang13-cling-emscripten_wasm
-            os: ubuntu-22.04
-            compiler: gcc-9
+          - name: ubu24-x86-gcc13-clang13-cling-emscripten_wasm
+            os: ubuntu-24.04
+            compiler: gcc-13
             clang-runtime: '13'
             cling: On
             cling-version: '1.0'
