--- a/unittests/CppInterOp/CMakeLists.txt
+++ b/unittests/CppInterOp/CMakeLists.txt
@@ -18,9 +18,11 @@ target_link_libraries(CppInterOpTests
   clangCppInterOp
   )
 
-set_source_files_properties(VariableReflectionTest.cpp PROPERTIES COMPILE_FLAGS
-  "-Wno-pedantic"
-)
+if(NOT WIN32)
+  set_source_files_properties(VariableReflectionTest.cpp PROPERTIES COMPILE_FLAGS
+    "-Wno-pedantic"
+  )
+endif()
 
 set_source_files_properties(InterpreterTest.cpp PROPERTIES COMPILE_DEFINITIONS
   "LLVM_BINARY_DIR=\"${LLVM_BINARY_DIR}\""
