Fix: resolve nested attributes of anonymous records in GetDatamembers (#321)

--- a/unittests/CppInterOp/CMakeLists.txt
+++ b/unittests/CppInterOp/CMakeLists.txt
@@ -18,6 +18,12 @@ target_link_libraries(CppInterOpTests
   clangCppInterOp
   )
 
+if(NOT WIN32)
+  set_source_files_properties(VariableReflectionTest.cpp PROPERTIES COMPILE_FLAGS
+    "-Wno-pedantic"
+  )
+endif()
+
 set_source_files_properties(InterpreterTest.cpp PROPERTIES COMPILE_DEFINITIONS
   "LLVM_BINARY_DIR=\"${LLVM_BINARY_DIR}\""
   )
