Remove flag as no undefined symbols found while building for wasm

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1344,7 +1344,7 @@ jobs:
                 ../
         fi
         
-        EMCC_CFLAGS='-sERROR_ON_UNDEFINED_SYMBOLS=0' emmake make -j ${{ env.ncpus }}
+        emmake make -j ${{ env.ncpus }}
 
         cd ..
         
