brew remove unxip on OSX-ARM exclusively
fix for the osx dependency issue

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -310,7 +310,10 @@ jobs:
       run: |
         brew update
         brew remove ruby@3.0
-        brew remove unxip
+        export ARCHITECHURE=$(uname -m)
+        if [[ "$ARCHITECHURE" != "x86_64" ]]; then
+          brew remove unxip
+        fi
         # workaround for https://github.com/actions/setup-python/issues/577
         for pkg in $(brew list | grep '^python@'); do
           brew unlink "$pkg"
@@ -764,10 +767,11 @@ jobs:
       run: |
         brew update
         brew remove ruby@3.0
-        brew remove unxip
         export ARCHITECHURE=$(uname -m)
         if [[ "$ARCHITECHURE" == "x86_64" ]]; then
           brew remove swiftlint
+        else
+          brew remove unxip
         fi
         # workaround for https://github.com/actions/setup-python/issues/577
         for pkg in $(brew list | grep '^python@'); do
